@@ -1637,18 +1637,6 @@ void test_PMULDQ ( void )
 }
 
 
-void test_PMULLD ( void )
-{
-   V128 src, dst;
-   Int i;
-   for (i = 0; i < 10; i++) {
-      randV128(&src);
-      randV128(&dst);
-      DO_mandr_r("pmulld", src, dst);
-   }
-}
-
-
 void test_POPCNTQ ( void )
 {
    ULong block[4];
