@@ -340,4 +340,15 @@ static inline void test_PMINUW ( void )
    }
 }
 
+static inline void test_PMULLD ( void )
+{
+   V128 src, dst;
+   Int i;
+   for (i = 0; i < 10; i++) {
+      randV128(&src);
+      randV128(&dst);
+      DO_mandr_r("pmulld", src, dst);
+   }
+}
+
 #endif /* __SSE4_COMMON_H */
