@@ -54,6 +54,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 513257  Add missing syswraps for lsm_list_modules
 513522  m_libcassert.c: 'ordered comparison of pointer with integer zero'
         compiler warning
+513475  Add SSE4.1 PMULLD instruction for x86 32 bit
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
